init branch commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".DrawActivity">
-        </activity>
+        <activity android:name=".GuessActivity"></activity>
+        <activity android:name=".DrawActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,8 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"/>
-        <activity android:name=".FriendsListActivity"/>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".FriendsListActivity" />
         <activity android:name=".SignInActivity" />
     </application>
 
