Added word selection screen and connected draw/guess to clicking on a game. Does not update db with chosen word and ids used to label images are wrong

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".FriendsListActivity" />
         <activity android:name=".SignInActivity" />
+        <activity android:name=".ChooseWordActivity" />
     </application>
 
 </manifest>
