--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".FriendsActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".ChooseWordActivity" />
+        <activity android:name=".AccountInfoActivity"/>
     </application>
 
 </manifest>
